--- a/AndroidResultsApp/AndroidResultsApp.csproj
+++ b/AndroidResultsApp/AndroidResultsApp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Translator.cs" />
+    <Compile Include="TranslationHistoryActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
